# eravpn-updater

./: .env.sample  .gitignore  Cargo.toml  README.md
.github/workflows/: master.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.js
frontend/src/components/: SignInForm.jsx
frontend/src/components/forms/: SignInForm.jsx
frontend/src/components/layouts/: CenterLayout.jsx
frontend/src/components/pages/: HomePage.jsx  NotFoundPage.jsx  SignIn.jsx  SignInPage.jsx
frontend/src/routes/: Pages.jsx  SignedInRoute.jsx  SignedOutRoute.jsx
frontend/src/store/: authentication.js  index.js  releases.js
frontend/src/store/actions/: authentication.js
frontend/src/store/reducers/: authentication.js  index.js
frontend/src/stuff/: jwt.js
frontend/src/styles/: fonts.scss  index.scss
migrations/2020-01-15-094119_add_accounts_table/: up.sql
migrations/2020-01-15-094119_add_users_table/: up.sql
migrations/2020-01-26-090640_add_releases_table/: up.sql
src/: constants.rs  error.rs  main.rs  messages_enum.rs  models.rs  response.rs  schema.rs
src/api/: account_controller.rs  mod.rs  ping_controller.rs  releases_controller.rs
src/api_response/: api_response.rs  mod.rs  service_error.rs
src/config/: app.rs  db.rs
src/middleware/: auth_middleware.rs
src/models/: account.rs  account_token.rs  mod.rs  release.rs  response.rs
src/services/: account_service.rs  account_token_service.rs  mod.rs  releases_service.rs
