[package]
name = "eravpn-updater"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-service = "1.0"
actix-cors = "0.2"
dotenv = "0.15"
jsonwebtoken = "6.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
futures = "0.3"
bcrypt = "0.6"

[dependencies.diesel]
version = "1.4"
features = ["postgres", "r2d2", "chrono"]

[dependencies.diesel_migrations]
version = "1.4"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]
